# Test_SMIT

./: .gitignore  LICENSE  README.md  formatter.sh  pyproject.toml  requirements.txt  settings.py
alembic/: env.py
docker/: Dockerfile  docker-compose.yml
docs/: api_table.md  classes_diagram.drawio  project_structure.md  use_case.drawio
src/: .env-example  main.py
src/api/: routes.py
src/db/: settings.py
src/domain/: main_reposetory.py  models.py  repositories.py
src/schemas/: schema.py
src/tests/: test_repoetories.py
src/tests/test_files/: cargo-rates.json
